Adding endpoint to create vote for poll
