# src/routes/index.ts
@@ -12,5 +12,6 @@ export function routes(app: Express) {
   app.get('/polls', getPollsHandler);
   app.get('/poll/:pollId', getPollHandler);
   app.get('/poll/:pollId/votes', getPollVotesHandler);
+  app.post('/poll/:pollId/vote', createPollVoteHandler);
   app.post('/poll', createPollHandler);
 }
